hphp/hack/test/typecheck/suspend_outside_of_coroutines2.php
<?hh // strict

async function f($b): Awaitable<int> {
  $a = suspend $b();
}
